proto: receive Flow children in ReactAdapter

--- a/package.json
+++ b/package.json
@@ -4,47 +4,48 @@
   "type": "module",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/bundles": "24.4.0-alpha23",
+    "@vaadin/bundles": "24.4.0-beta2",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/hilla-file-router": "24.4.0-alpha25",
-    "@vaadin/hilla-frontend": "24.4.0-alpha25",
-    "@vaadin/hilla-lit-form": "24.4.0-alpha25",
-    "@vaadin/hilla-react-auth": "24.4.0-alpha25",
-    "@vaadin/hilla-react-crud": "24.4.0-alpha25",
-    "@vaadin/hilla-react-form": "24.4.0-alpha25",
-    "@vaadin/hilla-react-i18n": "24.4.0-alpha25",
-    "@vaadin/hilla-react-signals": "24.4.0-alpha25",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha23",
-    "@vaadin/react-components": "24.4.0-alpha23",
+    "@vaadin/hilla-file-router": "24.4.0-beta1",
+    "@vaadin/hilla-frontend": "24.4.0-beta1",
+    "@vaadin/hilla-lit-form": "24.4.0-beta1",
+    "@vaadin/hilla-react-auth": "24.4.0-beta1",
+    "@vaadin/hilla-react-crud": "24.4.0-beta1",
+    "@vaadin/hilla-react-form": "24.4.0-beta1",
+    "@vaadin/hilla-react-i18n": "24.4.0-beta1",
+    "@vaadin/hilla-react-signals": "24.4.0-beta1",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-beta2",
+    "@vaadin/react-components": "24.4.0-beta2",
+    "@vaadin/react-components-pro": "24.4.0-beta2",
     "@vaadin/router": "1.7.5",
-    "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha23",
-    "@vaadin/vaadin-material-styles": "24.4.0-alpha23",
-    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha23",
+    "@vaadin/vaadin-development-mode-detector": "2.0.7",
+    "@vaadin/vaadin-lumo-styles": "24.4.0-beta2",
+    "@vaadin/vaadin-material-styles": "24.4.0-beta2",
+    "@vaadin/vaadin-themable-mixin": "24.4.0-beta2",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
     "lit": "3.1.3",
     "proj4": "2.11.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-router-dom": "6.23.0"
   },
   "devDependencies": {
     "@babel/preset-react": "7.24.1",
     "@rollup/plugin-replace": "5.0.5",
     "@rollup/pluginutils": "5.1.0",
-    "@types/react": "18.2.79",
-    "@types/react-dom": "18.2.25",
-    "@vaadin/hilla-generator-cli": "24.4.0-alpha25",
-    "@vaadin/hilla-generator-core": "24.4.0-alpha25",
-    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha25",
-    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha25",
-    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha25",
-    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha25",
-    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha25",
-    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha25",
-    "@vaadin/hilla-generator-utils": "24.4.0-alpha25",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@vaadin/hilla-generator-cli": "24.4.0-beta1",
+    "@vaadin/hilla-generator-core": "24.4.0-beta1",
+    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-beta1",
+    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-beta1",
+    "@vaadin/hilla-generator-plugin-client": "24.4.0-beta1",
+    "@vaadin/hilla-generator-plugin-model": "24.4.0-beta1",
+    "@vaadin/hilla-generator-plugin-push": "24.4.0-beta1",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-beta1",
+    "@vaadin/hilla-generator-utils": "24.4.0-beta1",
     "@vitejs/plugin-react": "4.2.1",
     "async": "3.2.5",
     "glob": "10.3.12",
@@ -62,47 +63,48 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/bundles": "24.4.0-alpha23",
+      "@vaadin/bundles": "24.4.0-beta2",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/hilla-file-router": "24.4.0-alpha25",
-      "@vaadin/hilla-frontend": "24.4.0-alpha25",
-      "@vaadin/hilla-lit-form": "24.4.0-alpha25",
-      "@vaadin/hilla-react-auth": "24.4.0-alpha25",
-      "@vaadin/hilla-react-crud": "24.4.0-alpha25",
-      "@vaadin/hilla-react-form": "24.4.0-alpha25",
-      "@vaadin/hilla-react-i18n": "24.4.0-alpha25",
-      "@vaadin/hilla-react-signals": "24.4.0-alpha25",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha23",
-      "@vaadin/react-components": "24.4.0-alpha23",
+      "@vaadin/hilla-file-router": "24.4.0-beta1",
+      "@vaadin/hilla-frontend": "24.4.0-beta1",
+      "@vaadin/hilla-lit-form": "24.4.0-beta1",
+      "@vaadin/hilla-react-auth": "24.4.0-beta1",
+      "@vaadin/hilla-react-crud": "24.4.0-beta1",
+      "@vaadin/hilla-react-form": "24.4.0-beta1",
+      "@vaadin/hilla-react-i18n": "24.4.0-beta1",
+      "@vaadin/hilla-react-signals": "24.4.0-beta1",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-beta2",
+      "@vaadin/react-components": "24.4.0-beta2",
+      "@vaadin/react-components-pro": "24.4.0-beta2",
       "@vaadin/router": "1.7.5",
-      "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha23",
-      "@vaadin/vaadin-material-styles": "24.4.0-alpha23",
-      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha23",
+      "@vaadin/vaadin-development-mode-detector": "2.0.7",
+      "@vaadin/vaadin-lumo-styles": "24.4.0-beta2",
+      "@vaadin/vaadin-material-styles": "24.4.0-beta2",
+      "@vaadin/vaadin-themable-mixin": "24.4.0-beta2",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
       "lit": "3.1.3",
       "proj4": "2.11.0",
-      "react": "18.2.0",
-      "react-dom": "18.2.0",
+      "react": "18.3.1",
+      "react-dom": "18.3.1",
       "react-router-dom": "6.23.0"
     },
     "devDependencies": {
       "@babel/preset-react": "7.24.1",
       "@rollup/plugin-replace": "5.0.5",
       "@rollup/pluginutils": "5.1.0",
-      "@types/react": "18.2.79",
-      "@types/react-dom": "18.2.25",
-      "@vaadin/hilla-generator-cli": "24.4.0-alpha25",
-      "@vaadin/hilla-generator-core": "24.4.0-alpha25",
-      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha25",
-      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha25",
-      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha25",
-      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha25",
-      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha25",
-      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha25",
-      "@vaadin/hilla-generator-utils": "24.4.0-alpha25",
+      "@types/react": "18.3.1",
+      "@types/react-dom": "18.3.0",
+      "@vaadin/hilla-generator-cli": "24.4.0-beta1",
+      "@vaadin/hilla-generator-core": "24.4.0-beta1",
+      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-beta1",
+      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-beta1",
+      "@vaadin/hilla-generator-plugin-client": "24.4.0-beta1",
+      "@vaadin/hilla-generator-plugin-model": "24.4.0-beta1",
+      "@vaadin/hilla-generator-plugin-push": "24.4.0-beta1",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-beta1",
+      "@vaadin/hilla-generator-utils": "24.4.0-beta1",
       "@vitejs/plugin-react": "4.2.1",
       "async": "3.2.5",
       "glob": "10.3.12",
@@ -117,7 +119,7 @@
       "workbox-core": "7.1.0",
       "workbox-precaching": "7.1.0"
     },
-    "hash": "b1e6e1946618b92cb51375d1609c30b43e5ac4e0108ed36b67a0de64a98c8665"
+    "hash": "6705b3093f79c35ee948b72e26236b75c0d4eced47e6bb4d50be07a43a1e3db8"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -145,6 +147,7 @@
     "proj4": "$proj4",
     "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
     "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
-    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles"
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
+    "@vaadin/react-components-pro": "$@vaadin/react-components-pro"
   }
 }
