--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,9 @@
 
 # The following files are generated/updated by vaadin-maven-plugin
 node_modules/
-frontend/generated/
 pnpmfile.js
 vite.generated.ts
+src/main/frontend/generated/
 
 # Browser drivers for local integration tests
 drivers/
