--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -8,6 +8,7 @@ permissions:
   contents: read
 jobs:
   verify:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     permissions:
       # for EnricoMi/publish-unit-test-result-action
@@ -15,13 +16,13 @@ jobs:
       checks: write
       pull-requests: write 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '18'
-      - uses: actions/setup-java@v3
+          node-version: 'lts/*'
+      - uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
       - name: Set TB License
         run: |
@@ -34,13 +35,19 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
-      - uses: browser-actions/setup-chrome@latest
-        with:
-          chrome-version: stable
-      - uses: nanasess/setup-chromedriver@master          
       - name: Verify
         run: |
           mvn -B -V -ntp verify -Dcom.vaadin.testbench.Parameters.headless -Pit,production
+      - name: Install Playwright Browsers
+        run: npx playwright install chromium --with-deps
+      - name: Run Playwright tests
+        run: npx playwright test
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
