--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,11 +1,13 @@
 name: Verify
 on:
   push:
-    branches: [v24]
   workflow_dispatch:
   pull_request:
 permissions:
   contents: read
+concurrency:
+  group: ${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
 jobs:
   verify:
     timeout-minutes: 60
@@ -14,7 +16,7 @@ jobs:
       # for EnricoMi/publish-unit-test-result-action
       issues: read
       checks: write
-      pull-requests: write 
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -24,33 +26,25 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-      - name: Set TB License
-        run: |
-          TBL=${{ secrets.TB_LICENSE }}
-          [ -z "$TBL" ] && echo "No TB license provided" && exit 1
-          mkdir -p ~/.vaadin/
-          echo '{"username":"'`echo $TBL | cut -d / -f1`'","proKey":"'`echo $TBL | cut -d / -f2`'"}' > ~/.vaadin/proKey          
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
+      - name: Install browsers
+        run: |
+          npm install --ci
+          npx playwright install chromium --with-deps
+          npx playwright install-deps
       - name: Verify
         run: |
-          mvn -B -V -ntp verify -Dcom.vaadin.testbench.Parameters.headless -Pit,production
-      - name: Install Playwright Browsers
-        run: npx playwright install chromium --with-deps
-      - name: Run Playwright tests
-        run: npx playwright test
+          ./mvnw -B -V -ntp verify -Pit,production
       - uses: actions/upload-artifact@v4
-        if: always()
         with:
-          name: playwright-report
-          path: playwright-report/
+          name: tests-report
+          path: target/**-reports
           retention-days: 30
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
-          files: "**/target/*-reports/TEST*.xml"
-          check_run_annotations: all tests, skipped tests
-          check_run_annotations_branch: v24
+          files: "target/*-reports/TEST*.xml"
