--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,13 +1,16 @@
 name: Verify
 on:
   push:
-    branches: [v24.4]
   workflow_dispatch:
   pull_request:
 permissions:
   contents: read
+concurrency:
+  group: ${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
 jobs:
   verify:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     permissions:
       # for EnricoMi/publish-unit-test-result-action
@@ -15,35 +18,33 @@ jobs:
       checks: write
       pull-requests: write
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '18'
-      - uses: actions/setup-java@v3
+          node-version: 'lts/*'
+      - uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
-      - name: Set TB License
-        run: |
-          TBL=${{ secrets.TB_LICENSE }}
-          [ -z "$TBL" ] && echo "No TB license provided" && exit 1
-          mkdir -p ~/.vaadin/
-          echo '{"username":"'`echo $TBL | cut -d / -f1`'","proKey":"'`echo $TBL | cut -d / -f2`'"}' > ~/.vaadin/proKey
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
-      - uses: browser-actions/setup-chrome@latest
-        with:
-          chrome-version: stable
-      - uses: nanasess/setup-chromedriver@master
+      - name: Install browsers
+        run: |
+          npm install --ci
+          npx playwright install chromium --with-deps
+          npx playwright install-deps
       - name: Verify
         run: |
-          mvn -B -V -ntp verify -Dcom.vaadin.testbench.Parameters.headless -Pit,production
+          ./mvnw -B -V -ntp verify -Pit,production
+      - uses: actions/upload-artifact@v4
+        with:
+          name: tests-report
+          path: target/**-reports
+          retention-days: 30
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
-          files: "**/target/*-reports/TEST*.xml"
-          check_run_annotations: all tests, skipped tests
-          check_run_annotations_branch: v24.4
+          files: "target/*-reports/TEST*.xml"
