--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "type": "module",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/bundles": "24.4.0-beta3",
+    "@vaadin/bundles": "24.4.0-rc1",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/hilla-file-router": "24.4.0-beta3",
-    "@vaadin/hilla-frontend": "24.4.0-beta3",
-    "@vaadin/hilla-lit-form": "24.4.0-beta3",
-    "@vaadin/hilla-react-auth": "24.4.0-beta3",
-    "@vaadin/hilla-react-crud": "24.4.0-beta3",
-    "@vaadin/hilla-react-form": "24.4.0-beta3",
-    "@vaadin/hilla-react-i18n": "24.4.0-beta3",
-    "@vaadin/hilla-react-signals": "24.4.0-beta3",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-beta3",
-    "@vaadin/react-components": "24.4.0-beta3",
-    "@vaadin/react-components-pro": "24.4.0-beta3",
+    "@vaadin/hilla-file-router": "24.4.0-rc1",
+    "@vaadin/hilla-frontend": "24.4.0-rc1",
+    "@vaadin/hilla-lit-form": "24.4.0-rc1",
+    "@vaadin/hilla-react-auth": "24.4.0-rc1",
+    "@vaadin/hilla-react-crud": "24.4.0-rc1",
+    "@vaadin/hilla-react-form": "24.4.0-rc1",
+    "@vaadin/hilla-react-i18n": "24.4.0-rc1",
+    "@vaadin/hilla-react-signals": "24.4.0-rc1",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-rc1",
+    "@vaadin/react-components": "24.4.0-rc1",
+    "@vaadin/react-components-pro": "24.4.0-rc1",
     "@vaadin/router": "1.7.5",
     "@vaadin/vaadin-development-mode-detector": "2.0.7",
-    "@vaadin/vaadin-lumo-styles": "24.4.0-beta3",
-    "@vaadin/vaadin-material-styles": "24.4.0-beta3",
-    "@vaadin/vaadin-themable-mixin": "24.4.0-beta3",
+    "@vaadin/vaadin-lumo-styles": "24.4.0-rc1",
+    "@vaadin/vaadin-material-styles": "24.4.0-rc1",
+    "@vaadin/vaadin-themable-mixin": "24.4.0-rc1",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
@@ -35,26 +35,26 @@
     "@babel/preset-react": "7.24.1",
     "@rollup/plugin-replace": "5.0.5",
     "@rollup/pluginutils": "5.1.0",
-    "@types/react": "18.3.2",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@vaadin/hilla-generator-cli": "24.4.0-beta3",
-    "@vaadin/hilla-generator-core": "24.4.0-beta3",
-    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-beta3",
-    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-beta3",
-    "@vaadin/hilla-generator-plugin-client": "24.4.0-beta3",
-    "@vaadin/hilla-generator-plugin-model": "24.4.0-beta3",
-    "@vaadin/hilla-generator-plugin-push": "24.4.0-beta3",
-    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-beta3",
-    "@vaadin/hilla-generator-utils": "24.4.0-beta3",
-    "@vitejs/plugin-react": "4.2.1",
+    "@vaadin/hilla-generator-cli": "24.4.0-rc1",
+    "@vaadin/hilla-generator-core": "24.4.0-rc1",
+    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-rc1",
+    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-rc1",
+    "@vaadin/hilla-generator-plugin-client": "24.4.0-rc1",
+    "@vaadin/hilla-generator-plugin-model": "24.4.0-rc1",
+    "@vaadin/hilla-generator-plugin-push": "24.4.0-rc1",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-rc1",
+    "@vaadin/hilla-generator-utils": "24.4.0-rc1",
+    "@vitejs/plugin-react": "4.3.0",
     "async": "3.2.5",
-    "glob": "10.3.15",
+    "glob": "10.4.1",
     "rollup-plugin-brotli": "3.1.0",
     "rollup-plugin-visualizer": "5.12.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.4.5",
-    "vite": "5.2.10",
+    "vite": "5.2.11",
     "vite-plugin-checker": "0.6.4",
     "workbox-build": "7.1.0",
     "workbox-core": "7.1.0",
@@ -63,24 +63,24 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/bundles": "24.4.0-beta3",
+      "@vaadin/bundles": "24.4.0-rc1",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/hilla-file-router": "24.4.0-beta3",
-      "@vaadin/hilla-frontend": "24.4.0-beta3",
-      "@vaadin/hilla-lit-form": "24.4.0-beta3",
-      "@vaadin/hilla-react-auth": "24.4.0-beta3",
-      "@vaadin/hilla-react-crud": "24.4.0-beta3",
-      "@vaadin/hilla-react-form": "24.4.0-beta3",
-      "@vaadin/hilla-react-i18n": "24.4.0-beta3",
-      "@vaadin/hilla-react-signals": "24.4.0-beta3",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-beta3",
-      "@vaadin/react-components": "24.4.0-beta3",
-      "@vaadin/react-components-pro": "24.4.0-beta3",
+      "@vaadin/hilla-file-router": "24.4.0-rc1",
+      "@vaadin/hilla-frontend": "24.4.0-rc1",
+      "@vaadin/hilla-lit-form": "24.4.0-rc1",
+      "@vaadin/hilla-react-auth": "24.4.0-rc1",
+      "@vaadin/hilla-react-crud": "24.4.0-rc1",
+      "@vaadin/hilla-react-form": "24.4.0-rc1",
+      "@vaadin/hilla-react-i18n": "24.4.0-rc1",
+      "@vaadin/hilla-react-signals": "24.4.0-rc1",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-rc1",
+      "@vaadin/react-components": "24.4.0-rc1",
+      "@vaadin/react-components-pro": "24.4.0-rc1",
       "@vaadin/router": "1.7.5",
       "@vaadin/vaadin-development-mode-detector": "2.0.7",
-      "@vaadin/vaadin-lumo-styles": "24.4.0-beta3",
-      "@vaadin/vaadin-material-styles": "24.4.0-beta3",
-      "@vaadin/vaadin-themable-mixin": "24.4.0-beta3",
+      "@vaadin/vaadin-lumo-styles": "24.4.0-rc1",
+      "@vaadin/vaadin-material-styles": "24.4.0-rc1",
+      "@vaadin/vaadin-themable-mixin": "24.4.0-rc1",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
@@ -94,32 +94,32 @@
       "@babel/preset-react": "7.24.1",
       "@rollup/plugin-replace": "5.0.5",
       "@rollup/pluginutils": "5.1.0",
-      "@types/react": "18.3.2",
+      "@types/react": "18.3.3",
       "@types/react-dom": "18.3.0",
-      "@vaadin/hilla-generator-cli": "24.4.0-beta3",
-      "@vaadin/hilla-generator-core": "24.4.0-beta3",
-      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-beta3",
-      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-beta3",
-      "@vaadin/hilla-generator-plugin-client": "24.4.0-beta3",
-      "@vaadin/hilla-generator-plugin-model": "24.4.0-beta3",
-      "@vaadin/hilla-generator-plugin-push": "24.4.0-beta3",
-      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-beta3",
-      "@vaadin/hilla-generator-utils": "24.4.0-beta3",
-      "@vitejs/plugin-react": "4.2.1",
+      "@vaadin/hilla-generator-cli": "24.4.0-rc1",
+      "@vaadin/hilla-generator-core": "24.4.0-rc1",
+      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-rc1",
+      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-rc1",
+      "@vaadin/hilla-generator-plugin-client": "24.4.0-rc1",
+      "@vaadin/hilla-generator-plugin-model": "24.4.0-rc1",
+      "@vaadin/hilla-generator-plugin-push": "24.4.0-rc1",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-rc1",
+      "@vaadin/hilla-generator-utils": "24.4.0-rc1",
+      "@vitejs/plugin-react": "4.3.0",
       "async": "3.2.5",
-      "glob": "10.3.15",
+      "glob": "10.4.1",
       "rollup-plugin-brotli": "3.1.0",
       "rollup-plugin-visualizer": "5.12.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.4.5",
-      "vite": "5.2.10",
+      "vite": "5.2.11",
       "vite-plugin-checker": "0.6.4",
       "workbox-build": "7.1.0",
       "workbox-core": "7.1.0",
       "workbox-precaching": "7.1.0"
     },
-    "hash": "d8ddc9c76a424746a892d48a8b7f4e86d3c037945ee968d39a4befa10b38b7ce"
+    "hash": "9216b8ed3adc0001a14f16ddfcffe5e8d248df70d989546354ca252375595e9b"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
