--- a/package.json
+++ b/package.json
@@ -4,49 +4,49 @@
   "type": "module",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/bundles": "24.4.0-rc1",
+    "@vaadin/bundles": "24.5.0-alpha3",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/hilla-file-router": "24.4.0-rc1",
-    "@vaadin/hilla-frontend": "24.4.0-rc1",
-    "@vaadin/hilla-lit-form": "24.4.0-rc1",
-    "@vaadin/hilla-react-auth": "24.4.0-rc1",
-    "@vaadin/hilla-react-crud": "24.4.0-rc1",
-    "@vaadin/hilla-react-form": "24.4.0-rc1",
-    "@vaadin/hilla-react-i18n": "24.4.0-rc1",
-    "@vaadin/hilla-react-signals": "24.4.0-rc1",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-rc1",
-    "@vaadin/react-components": "24.4.0-rc1",
-    "@vaadin/react-components-pro": "24.4.0-rc1",
+    "@vaadin/hilla-file-router": "24.5.0-alpha2",
+    "@vaadin/hilla-frontend": "24.5.0-alpha2",
+    "@vaadin/hilla-lit-form": "24.5.0-alpha2",
+    "@vaadin/hilla-react-auth": "24.5.0-alpha2",
+    "@vaadin/hilla-react-crud": "24.5.0-alpha2",
+    "@vaadin/hilla-react-form": "24.5.0-alpha2",
+    "@vaadin/hilla-react-i18n": "24.5.0-alpha2",
+    "@vaadin/hilla-react-signals": "24.5.0-alpha2",
+    "@vaadin/polymer-legacy-adapter": "24.5.0-alpha3",
+    "@vaadin/react-components": "24.5.0-alpha3",
+    "@vaadin/react-components-pro": "24.5.0-alpha3",
     "@vaadin/router": "1.7.5",
     "@vaadin/vaadin-development-mode-detector": "2.0.7",
-    "@vaadin/vaadin-lumo-styles": "24.4.0-rc1",
-    "@vaadin/vaadin-material-styles": "24.4.0-rc1",
-    "@vaadin/vaadin-themable-mixin": "24.4.0-rc1",
+    "@vaadin/vaadin-lumo-styles": "24.5.0-alpha3",
+    "@vaadin/vaadin-material-styles": "24.5.0-alpha3",
+    "@vaadin/vaadin-themable-mixin": "24.5.0-alpha3",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "3.1.3",
+    "lit": "3.1.4",
     "proj4": "2.11.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.1"
   },
   "devDependencies": {
-    "@babel/preset-react": "7.24.1",
-    "@rollup/plugin-replace": "5.0.5",
+    "@babel/preset-react": "7.24.7",
+    "@rollup/plugin-replace": "5.0.7",
     "@rollup/pluginutils": "5.1.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@vaadin/hilla-generator-cli": "24.4.0-rc1",
-    "@vaadin/hilla-generator-core": "24.4.0-rc1",
-    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-rc1",
-    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-rc1",
-    "@vaadin/hilla-generator-plugin-client": "24.4.0-rc1",
-    "@vaadin/hilla-generator-plugin-model": "24.4.0-rc1",
-    "@vaadin/hilla-generator-plugin-push": "24.4.0-rc1",
-    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-rc1",
-    "@vaadin/hilla-generator-utils": "24.4.0-rc1",
-    "@vitejs/plugin-react": "4.3.0",
+    "@vaadin/hilla-generator-cli": "24.5.0-alpha2",
+    "@vaadin/hilla-generator-core": "24.5.0-alpha2",
+    "@vaadin/hilla-generator-plugin-backbone": "24.5.0-alpha2",
+    "@vaadin/hilla-generator-plugin-barrel": "24.5.0-alpha2",
+    "@vaadin/hilla-generator-plugin-client": "24.5.0-alpha2",
+    "@vaadin/hilla-generator-plugin-model": "24.5.0-alpha2",
+    "@vaadin/hilla-generator-plugin-push": "24.5.0-alpha2",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.5.0-alpha2",
+    "@vaadin/hilla-generator-utils": "24.5.0-alpha2",
+    "@vitejs/plugin-react": "4.3.1",
     "async": "3.2.5",
     "glob": "10.4.1",
     "rollup-plugin-brotli": "3.1.0",
@@ -54,58 +54,58 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.4.5",
-    "vite": "5.2.11",
+    "vite": "5.3.1",
     "vite-plugin-checker": "0.6.4",
-    "workbox-build": "7.1.0",
+    "workbox-build": "7.1.1",
     "workbox-core": "7.1.0",
     "workbox-precaching": "7.1.0"
   },
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/bundles": "24.4.0-rc1",
+      "@vaadin/bundles": "24.5.0-alpha3",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/hilla-file-router": "24.4.0-rc1",
-      "@vaadin/hilla-frontend": "24.4.0-rc1",
-      "@vaadin/hilla-lit-form": "24.4.0-rc1",
-      "@vaadin/hilla-react-auth": "24.4.0-rc1",
-      "@vaadin/hilla-react-crud": "24.4.0-rc1",
-      "@vaadin/hilla-react-form": "24.4.0-rc1",
-      "@vaadin/hilla-react-i18n": "24.4.0-rc1",
-      "@vaadin/hilla-react-signals": "24.4.0-rc1",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-rc1",
-      "@vaadin/react-components": "24.4.0-rc1",
-      "@vaadin/react-components-pro": "24.4.0-rc1",
+      "@vaadin/hilla-file-router": "24.5.0-alpha2",
+      "@vaadin/hilla-frontend": "24.5.0-alpha2",
+      "@vaadin/hilla-lit-form": "24.5.0-alpha2",
+      "@vaadin/hilla-react-auth": "24.5.0-alpha2",
+      "@vaadin/hilla-react-crud": "24.5.0-alpha2",
+      "@vaadin/hilla-react-form": "24.5.0-alpha2",
+      "@vaadin/hilla-react-i18n": "24.5.0-alpha2",
+      "@vaadin/hilla-react-signals": "24.5.0-alpha2",
+      "@vaadin/polymer-legacy-adapter": "24.5.0-alpha3",
+      "@vaadin/react-components": "24.5.0-alpha3",
+      "@vaadin/react-components-pro": "24.5.0-alpha3",
       "@vaadin/router": "1.7.5",
       "@vaadin/vaadin-development-mode-detector": "2.0.7",
-      "@vaadin/vaadin-lumo-styles": "24.4.0-rc1",
-      "@vaadin/vaadin-material-styles": "24.4.0-rc1",
-      "@vaadin/vaadin-themable-mixin": "24.4.0-rc1",
+      "@vaadin/vaadin-lumo-styles": "24.5.0-alpha3",
+      "@vaadin/vaadin-material-styles": "24.5.0-alpha3",
+      "@vaadin/vaadin-themable-mixin": "24.5.0-alpha3",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "3.1.3",
+      "lit": "3.1.4",
       "proj4": "2.11.0",
       "react": "18.3.1",
       "react-dom": "18.3.1",
       "react-router-dom": "6.23.1"
     },
     "devDependencies": {
-      "@babel/preset-react": "7.24.1",
-      "@rollup/plugin-replace": "5.0.5",
+      "@babel/preset-react": "7.24.7",
+      "@rollup/plugin-replace": "5.0.7",
       "@rollup/pluginutils": "5.1.0",
       "@types/react": "18.3.3",
       "@types/react-dom": "18.3.0",
-      "@vaadin/hilla-generator-cli": "24.4.0-rc1",
-      "@vaadin/hilla-generator-core": "24.4.0-rc1",
-      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-rc1",
-      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-rc1",
-      "@vaadin/hilla-generator-plugin-client": "24.4.0-rc1",
-      "@vaadin/hilla-generator-plugin-model": "24.4.0-rc1",
-      "@vaadin/hilla-generator-plugin-push": "24.4.0-rc1",
-      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-rc1",
-      "@vaadin/hilla-generator-utils": "24.4.0-rc1",
-      "@vitejs/plugin-react": "4.3.0",
+      "@vaadin/hilla-generator-cli": "24.5.0-alpha2",
+      "@vaadin/hilla-generator-core": "24.5.0-alpha2",
+      "@vaadin/hilla-generator-plugin-backbone": "24.5.0-alpha2",
+      "@vaadin/hilla-generator-plugin-barrel": "24.5.0-alpha2",
+      "@vaadin/hilla-generator-plugin-client": "24.5.0-alpha2",
+      "@vaadin/hilla-generator-plugin-model": "24.5.0-alpha2",
+      "@vaadin/hilla-generator-plugin-push": "24.5.0-alpha2",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.5.0-alpha2",
+      "@vaadin/hilla-generator-utils": "24.5.0-alpha2",
+      "@vitejs/plugin-react": "4.3.1",
       "async": "3.2.5",
       "glob": "10.4.1",
       "rollup-plugin-brotli": "3.1.0",
@@ -113,13 +113,13 @@
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.4.5",
-      "vite": "5.2.11",
+      "vite": "5.3.1",
       "vite-plugin-checker": "0.6.4",
-      "workbox-build": "7.1.0",
+      "workbox-build": "7.1.1",
       "workbox-core": "7.1.0",
       "workbox-precaching": "7.1.0"
     },
-    "hash": "9216b8ed3adc0001a14f16ddfcffe5e8d248df70d989546354ca252375595e9b"
+    "hash": "b96d27b70646c151d62f8ca7d39a66db9057087b842f1d313c1fcfba8fe5565d"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
